--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/meteor-solid.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -24,7 +24,7 @@
     -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/darkly/bootstrap.min.css"
     integrity="sha256-xKfcJHDOlJkFvYN1rmmGhwwo9llZ2M6xB31SA0RDdYA=" crossorigin="anonymous">
-  <title>React App</title>
+  <title>LearnCourse</title>
 </head>
 
 <body>
